feat(server): use latest packages
